--- a/Restitution_FFEM_20210115/doc_prefix.tex
+++ b/Restitution_FFEM_20210115/doc_prefix.tex
@@ -58,7 +58,9 @@
       \tableofcontents[sections=2]
     \end{column}
     \begin{column}{0.5\textwidth}
-      \tableofcontents[sections={3-5}]
+        \tableofcontents[sections=3]
+        \vspace{0.5cm}
+        \tableofcontents[sections=4]
     \end{column}
   \end{columns}
 \end{frame}
