--- a/Restitution_FFEM_20210115/header.tex
+++ b/Restitution_FFEM_20210115/header.tex
@@ -72,7 +72,9 @@
         \tableofcontents[sections=2,currentsection]
       \end{column}
       \begin{column}{0.5\textwidth}
-        \tableofcontents[sections={3-5},currentsection]
+        \tableofcontents[sections=3,currentsection]
+        \vspace{0.5cm}
+        \tableofcontents[sections=4,currentsection]
       \end{column}
     \end{columns}
   \end{frame}
