--- a/forestatrisk-tropics/doc_prefix.tex
+++ b/forestatrisk-tropics/doc_prefix.tex
@@ -27,7 +27,7 @@
     
     \includegraphics[width=10cm]{figs/Banniere}
     
-    \small{Ghislain Vieilledent$^{1, 2}$\hspace{0.5cm}Christelle Vancutsem$^{2}$\hspace{0.5cm}Frédéric Achard$^{2}$}
+    \small{Ghislain VIEILLEDENT$^{1, 2}$\hspace{0.25cm}Christelle VANCUTSEM$^{2}$\hspace{0.25cm}Frédéric ACHARD$^{2}$}
       
     \vspace{0.25cm}
     
