--- a/forestatrisk-tropics/doc_suffix.tex
+++ b/forestatrisk-tropics/doc_suffix.tex
@@ -3,7 +3,7 @@
 {
   % Use background image
   \usebackgroundtemplate{%
-    \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy-NC}
+    \includegraphics[keepaspectratio=true, height=\paperheight]{figs/Canopy-NC}
   }
   \setbeamertemplate{navigation symbols}{}
   % Remove shadow from block
