Adding JSDM-Metradica.

--- a/JSDM-Metradica/doc_prefix.tex
+++ b/JSDM-Metradica/doc_prefix.tex
@@ -15,7 +15,7 @@
   \setbeamertemplate{navigation symbols}{}
   \begin{frame}[plain, noframenumbering]
   \begin{center}
-  \small{\textbf{"Metradica" -- April, 30th 2021}}
+  \small{\textbf{DYAFOR meeting -- March, 1st 2022}}
   \end{center}
   \vspace{-0.5cm}
   \titlepage % Presentation first page
@@ -27,17 +27,17 @@
     
     \includegraphics[width=10cm]{figs/Banniere}
     
-    \small{Jeanne CLEMENT$^{1}$\hspace{0.25cm}Ghislain VIEILLEDENT$^{1}$}
+    \small{Ghislain VIEILLEDENT$^{1, 2}$\hspace{0.25cm}Jeanne CLEMENT$^{1, 2}$\hspace{0.25cm}METRADICA$^{2}$}
       
     \vspace{0.25cm}
     
     {\scriptsize
       \begin{tabular}{l}
-        $[1]$ \textbf{Cirad} UMR AMAP
+        $[1]$ \textbf{Cirad} UMR AMAP, $[2]$ \textbf{METRADICA} Labex CEBA
       \end{tabular}
     }
     
-    \includegraphics[width=0.5\textwidth]{figs/partners_logos}
+    \includegraphics[width=0.8\textwidth]{figs/partners_logos}
     
   \end{center}
   \end{frame}
@@ -45,20 +45,20 @@
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \placelogotrue
-% \begin{frame}
-%   \frametitle{Plan}
-%   \begin{columns}[c]
-%     \begin{column}{0.5\textwidth}
-%       \tableofcontents[sections=1]
-%       \vspace{0.5cm}
-%       \tableofcontents[sections=2]
-%     \end{column}
-%     \begin{column}{0.5\textwidth}
-%         \tableofcontents[sections=3]
-%         \vspace{0.5cm}
-%         \tableofcontents[sections=4]
-%     \end{column}
-%   \end{columns}
-% \end{frame}
-% \placelogofalse
+\placelogotrue
+\begin{frame}
+  \frametitle{Plan}
+  \begin{columns}[c]
+    \begin{column}{0.5\textwidth}
+      \tableofcontents[sections=1]
+      \vspace{0.5cm}
+      \tableofcontents[sections=2]
+    \end{column}
+    \begin{column}{0.5\textwidth}
+        \tableofcontents[sections=3]
+        \vspace{0.5cm}
+        \tableofcontents[sections=4]
+    \end{column}
+  \end{columns}
+\end{frame}
+\placelogofalse
