--- a/JSDM-Metradica/doc_suffix.tex
+++ b/JSDM-Metradica/doc_suffix.tex
@@ -13,8 +13,8 @@
     \begin{block}{}
       \begin{center}
         \ldots~Thank you for attention~\ldots \\
-        %\url{https://forestatrisk.cirad.fr} \\
-        \includegraphics[width=0.5\textwidth]{figs/partners_logos}
+        \url{https://ecology.ghislainv.fr/presentations} \\
+        \includegraphics[width=0.8\textwidth]{figs/partners_logos}
       \end{center}
     \end{block}
   \end{frame}
